Add Expensify style

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,3 +1,14 @@
+// Color
+$dark-grey: #333333;
+$grey: #666;
+$blue: #1c88b1;
+$red: #eb3629;
+$off-white: #f2f2f2;
+$dark-blue: #364051;
+// Font-size
+$font-size-lg: 1.8rem;
+$font-size-s: 1.6rem;
+// Spacing
 $desktop-breakpoint: 45rem;
 $s-size: 1.2rem;
 $m-size: 1.6rem;
