--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,10 +1,16 @@
 // 1rem = 16px; 16 * 62.5 = 10
+* {
+    box-sizing: border-box; // remove the additional space from padding
+}
+
 html {
     font-size: 62.5%;
 }
 
 body {
+    color: $dark-grey;
     font-family: Helvetica, Arial, sans-serif;
+    line-height: 1.6;
     font-size: $m-size;
 }
 
